--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,6 @@
-<div class="form-group search-field">
-  <%= form_tag :search, method: :get, class: "form-inline" do %>
-  <%= text_field_tag :search, "Enter a zipcode", class: "form-control" %>
-  <%= submit_tag "Search", class: "btn btn-primary" %>
-</div>
-<% end %>
+<%= form_tag("/search", method: "get") do %>
+            <%= label_tag(:zip, "Search by zip") %>
+            <%= text_field_tag(:zip), params[:zip] %>
+
+            <%= submit_tag("Submit") %>
+        <% end %>
