Starting D.D.D. for store search now directing to stores controller and store index

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,2 @@
-<%= form_tag("/search", method: "get") do %>
-            <%= label_tag(:zip, "Search by zip") %>
-            <%= text_field_tag(:zip), params[:zip] %>
-
-            <%= submit_tag("Submit") %>
-        <% end %>
+<h3>Stores within 25 miles</h3>
+<h4>17 total stores</h4>
