--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,6 +19,11 @@
       <li>
         <a href="/orders">Orders</a>
       </li>
+      <%= form_tag("/stores", method: "get") do %>
+      <%= label_tag(:zip, "Search by zipcode") %>
+      <%= text_field_tag(:zip, params[:zip])%>
+      <%= submit_tag("Search") %>
+      <% end %>
     </ul>
   </div>
 </nav>
